feat: 生成後にさら問いできるように
